# med-lit-graph

./: .dockerignore.test  .flake8  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  COMMIT_SUMMARY.md  CONTINUE_WORK.md  CURL_EXAMPLES_VALIDATION.md  DESIGN_DECISIONS.md  LICENSE.txt  NEXT_STEP.md  NOTES.md  PIPELINE_TEST_HOWTO.md  README.md  SCHEMA_NOTES.md  T.sh  TODO.md  check.sh  docker-compose.test.yml  docker-compose.yml  example_sql_mixin.py  lint_and_test.sh  pyproject.toml  run_tests_in_docker.sh  test_sql_mixin.py
.github/: copilot-instructions.md
client/: QUERY_LANGUAGE.md  README.md
cloud/: LAMBDA_LABS.md  README.md
docs/: DESIGN_DECISIONS.md  IMPLEMENTATION_SUMMARY.md  ONTOLOGY_SUPPORT.md  QUERY_LANGUAGE_NOTES.md  README.md  SCHEMA_NOTES.md  TESTING_ISSUES.md  TODO.md
hiv-controversy/: AGE_BEST_PRACTICES.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  JSON_FORMAT.md  PACKAGE_CONTENTS.md  PIPELINE_USAGE.md  PMC1307740.xml  PMC322947.xml  PMC329539.xml  QUERY_TOOLS.md  QUICKSTART.md  README.md  SCHEMA.md  base.py  db_serialization.py  docker-compose.yml  entity.py  example_usage.py  fetch.sh  init-age.sql  interactive_query.py  pmc_claims_pipeline.py  pmc_embeddings_pipeline.py  pmc_evidence_pipeline.py  pmc_graph_pipeline.py  pmc_ner_pipeline.py  pmc_provenance_pipeline.py  query_api.py  query_examples.py  relationship.py  requirements.txt  run_pipeline.sh
ingestion/: COGITATE.md  Dockerfile  OUCH.txt  OUCH2.txt  PROVENANCE.md  QUICKSTART.md  README_POC.md  docker-compose.yml  entrypoint.sh  example_paper_output_with_provenance.json  get_pmcids.py  ingest_papers.py  ingest_papers_fast.py  init_db.py  medical_prompts.py  pmcids.txt  provenance.py  requirements.txt  run_stage1.py  session_summary.md  sqlmodel_inheritance_poc.py  sync_to_postgres.py  test_entity_fix.py  test_flexible_parsing.py  test_utils.py
mcp/: server.py
med_lit_graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schema/: ARCHITECTURE.md  README.md  __init__.py  base.py  entity.py  entity_sqlmodel.py  mapper.py  migration.sql  relationship.py  relationship_sqlmodel.py  sql_mixin.py
(+58 files in other folders)
